# 0x42

./: README.md  pyproject.toml  run.py  schema.sql
.github/workflows/: python-lint.yml
src/core/: __init__.py  botbase.py  database.py
src/utils/: config.py
